# plinor_parser_sasmallstock

./: .gitignore  Makefile  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docker/: Dockerfile  Dockerfile.windows_gnu  Dockerfile.windows_msvc
src/: app.js  index.html  main.js
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  logging.rs  main.rs  pars_http.rs  requests.rs  schema.rs  system_commands.rs
src-tauri/src/controllers/: data_processor.rs  html_parser.rs  http_client.rs  mod.rs
src-tauri/src/database/: connection.rs  db.rs  mod.rs  models.rs  queries.rs  schema.rs
src/html/: breeds.html
