[package]
name = "test_app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
log = "0.4.21"
simple-logging = "2.0.2"
reqwest = { version = "0.12.4", features = ["json"] }
select = "0.6.0"
tokio = { version = "1.38", features = ["full"] }
dotenv = { version = "0.15"}
validator = { version = "0.18", features = ["derive"] }
os_info = { version = "3", default-features = false }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
