[package]
name = "plinor_parser"
version = "0.0.1"
description = "Десктопное приложения для парсинга сайта"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "devtools", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

diesel = { version = "2.2.2", features = ["sqlite", "128-column-tables", "extras"] }
libsqlite3-sys = { version = "0.29.0", features = ["bundled"] }

log = { version = "0.4.21", features = ["std"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "std", "json", "chrono"] }

simple-logging = "2.0.2"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
select = "0.6.0"
tokio = { version = "1.38", features = ["full"] }
dotenv = { version = "0.15" }
validator = { version = "0.18", features = ["derive"] }
scraper = { version = "0.19.0" }
lazy_static = { version = "1.4" }
uuid = { version = "1.10.0", features = ["v4"] }
home = "0.5.9"
# icon = "1.0.0"
# rusqlite = {version = "0.28.0", features = ["bundled"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
